# apd-crs

./: MANIFEST.in  README.md  setup.cfg
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst  survival_analysis.rst
docs/tutorials/: Churn.ipynb  Manufacturing.ipynb  Marketing.ipynb  PU_Learning.ipynb  index.rst  telco_preprocessed_full.csv
src/apd_crs/: _common_estimate.py  _core.py  _estimate.py  _parameters.py  _survival_func.py  _validate.py  survival_analysis.py
src/apd_crs/datasets/: __init__.py  load_datasets.py  manufacturing.csv  melanoma.csv
tests/: __init__.py  make_df.py  test_approaches.py
