[metadata]
name = apd-crs
version = 0.0.9
author = Yash Puranik
author_email = yash.puranik@aimpointdigital.com
description = apd-crs is a Python package for survival analysis with cure rate, released by Aimpoint Digital, LP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aimpoint-Digital/apd-crs
project_urls =
    Bug Tracker = https://github.com/Aimpoint-Digital/apd-crs/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true
install_requires = 
    numpy
    scipy
    autograd
    pandas
    scikit-survival
    scikit_learn
    tqdm

[options.packages.find]
where = src
